polybot-k8s/polybot-prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: polybot-prod-service
  namespace: prod
spec:
  selector:
    app: polybot-prod
  ports:
    - port: 8443         # Internal port (what Ingress sees)
      targetPort: 8443   # Your app's container port
