polybot-k8s/polybot-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-prod-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Prevent redirect loop
spec:
  ingressClassName: nginx
  rules:
  - host: majd.app.prod.fursa.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polybot-prod-service
            port:
              number: 8443   # match the port your app listens on inside the pod
