polybot-k8s/polybot-prod/polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  labels:
    app: polybot-prod
  name: polybot-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot-prod
  template:
    metadata:
      labels:
        app: polybot-prod
    spec:
      containers:
      - image: ghcr.io/majdabbas9/telegram_bot_images:219
        name: polybot-container
---
apiVersion: v1
kind: Service
metadata:
  name: polybot-prod-service
  namespace: prod
spec:
  selector:
    app: polybot-prod
  ports:
    - port: 8443         # Internal port (what Ingress sees)
      targetPort: 8443   # Your app's container port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-prod-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Prevent redirect loop
spec:
  ingressClassName: nginx
  rules:
  - host: majd.app.prod.fursa.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polybot-service
            port:
              number: 8443   # match the port your app listens on inside the pod
